# virt-compose

./: .gitignore  Dockerfile  Makefile  README.md  devbox.json  flake.nix  libvirt-compose.py  machine-dump.xml  machine.xml  network.xml  pyproject.toml  virt_compose.py
examples/arch/: arch-install.sh  arch.yml  virt-compose.yml
examples/nixos/: nixos.yml  virt-compose.yml
examples/nixos/nix/: configuration.nix  flake.nix
