[project]
name = "virt-compose"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "cyclopts>=3.3.1",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
]

[project.scripts]
virt-compose = "virt_compose:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
